@@ -1,3 +1,9 @@
+2018-07-14 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc,
+	  src/SDCClospre.hpp:
+	  Fix bug #2673.
+
 2018-07-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/z80/peep.c,
